# personal_library

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
personal_library/: __init__.py
personal_library/Services/: database.py
personal_library/static/css/: base.css  library.css
personal_library/static/js/comics/: lookup.js
personal_library/templates/: base.html
personal_library/templates/comics/: library.html  lookup.html
personal_library/views/: books.py  comics.py
